--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <meta http-equiv="Content-Security-Policy" content="script-src 'self'">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>
         <title>Benben Controller</title>
+        <script defer type="module" src="/src/index.ts"></script>
     </head>
     <body>
         <div id="app"></div>
-        <script type="module" src="/src/index.ts"></script>
     </body>
 </html>
